fix: optimized reads from firebase (removing findAll())